--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "mongoose": "^8.9.2",
     "nodemon": "^3.1.9",
     "passport": "^0.7.0",
@@ -29,7 +30,8 @@
     "update": "^0.7.4",
     "updated": "^2.1.2",
     "uuid": "^11.0.3",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "multer": "^2.0.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -38,7 +40,9 @@
     "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/lodash": "^4.17.18",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.13",
     "@types/node": "^22.10.2",
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.16",
