--- a/server/package.json
+++ b/server/package.json
@@ -22,16 +22,17 @@
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongoose": "^8.9.2",
+    "multer": "^2.0.1",
     "nodemon": "^3.1.9",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "razorpay": "^2.9.6",
     "update": "^0.7.4",
     "updated": "^2.1.2",
     "uuid": "^11.0.3",
-    "zod": "^3.24.1",
-    "multer": "^2.0.1"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -52,4 +53,3 @@
     "typescript": "^5.7.2"
   }
 }
-
